
    * Fixes
        - Fix SkipFirst and FirstSkip limit dialects (Informix and Firebird)
        - Fix "Skimming limit" dialects (Top, FetchFirst) to properly check
          the order_by criteria for stability
        - Fix "Skimming limit" dialects (Top, FetchFirst) to propagate
          non-selected order criteria when part of a larger subquery
        - A number of corner case fixes of void context populate() with \[]
        - Fix corner case of forked children disconnecting the parents DBI
          handle
        - Improve identity/autoinc retrieval code in MSSQL and Sybase -
          should reduce weird side-effects especially with populate()
        - Explicitly disable DBD::ODBC batch operations (as of DBD::ODBC 1.35)
          for the following drivers too buggy to handle the optimized path:
          - FreeTDS ODBC driver (when used with MSSQL)
          - The Firebird ODBC driver
          - The MSAccess ODBC driver
        - Explicitly disable DBD::ODBC dynamic_cursors when using freetds 0.83
          or later - they made enough ODBC incompatible changes making it
          impossible to support sanely
        - Explicitly disable SCOPE_IDENTITY queries and statement caching for
          MSSQL on DBD::Sybase compiled against freetds 0.83 or later - way too
          buggy
        - Disable statement caching when using Sybase ASE and DBD::Sybase
          compiled against freetds 0.83 or later
        - Fix leakage of $schema on in-memory new_related() calls
        - Fix more cases of $schema leakage in SQLT::Parser::DBIC
        - Fix leakage of $storage in ::Storage::DBI::Oracle
        - Fix pessimization of Oracle RowNum limit dialect query when no
          offset has been specified
        - Remove useless vestigial pessimization in Ordered.pm for cases 
          when the position column is part of a unique constraint
        - Fix dbicadmin to no longer ignore the documented 'config' option