@@ -218,4 +218,44 @@ is_same_sql_bind( $rs_selectas_top->search({})->as_query,
   );
 }
 
+my $attr = {};
+my $rs_selectas_rel = $schema->resultset('BooksInLibrary')->search(undef, {
+  columns => 'me.id',
+  offset => 3,
+  rows => 4,
+  '+columns' => { bar => \['? * ?', [ $attr => 11 ], [ $attr => 12 ]], baz => \[ '?', [ $attr => 13 ]] },
+  order_by => [ \['? / ?', [ $attr => 1 ], [ $attr => 2 ]], \[ '?', [ $attr => 3 ]], 'me.id' ],
+  having => \[ '?', [ $attr => 21 ] ],
+});
+
+is_same_sql_bind(
+  $rs_selectas_rel->as_query,
+  '(
+    SELECT id, bar, baz
+      FROM (
+        SELECT id, bar, baz, ORDER__BY__1, ORDER__BY__2
+          FROM (
+            SELECT me.id, ? * ? AS bar, ? AS baz, ? / ? AS ORDER__BY__1, ? AS ORDER__BY__2
+              FROM books me
+            WHERE ( source = ? )
+            HAVING ?
+            ORDER BY ? / ?, ?, me.id
+            FETCH FIRST 7 ROWS ONLY
+          ) me
+        ORDER BY ORDER__BY__1 DESC, ORDER__BY__2 DESC, me.id DESC
+        FETCH FIRST 4 ROWS ONLY
+      ) me
+    ORDER BY ORDER__BY__1, ORDER__BY__2, me.id
+    FETCH FIRST 4 ROWS ONLY
+  )',
+  [
+    [ $attr => 11 ], [ $attr => 12 ], [ $attr => 13 ],
+    [ $attr => 1 ], [ $attr => 2 ], [ $attr => 3 ],
+    [ { sqlt_datatype => 'varchar', sqlt_size => 100, dbic_colname => 'source' } => 'Library' ],
+    [ $attr => 21 ],
+    [ $attr => 1 ], [ $attr => 2 ], [ $attr => 3 ],
+  ],
+  'Pagination with sub-query in ORDER BY works'
+);
+
 done_testing;
